tests/error/poly_errors/polymorphic_decl.err
Error: Invalid function declaration (at $FILE:14:0)
   | 
12 | 
13 | @guppy.declare
14 | def main(_: Struct[F]) -> float: ...
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Function declaration `main` is not allowed to be generic
   |                                      over `F: float`

Guppy compilation failed due to 1 previous error
